# Ucz_Praktyka_5

./: CMakeLists.txt  IntVector.cpp  IntVector.h  main.cpp
